--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>Simple Banking System</h1>
-    <script src="bankAccount.js"></script>
-    <script src="index.js"></script>
+    <script type="module" src="bankAccount.js"></script>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
