--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Module 3 - Activity: Simple Banking System</title>
+    <title>Banking System</title>
   </head>
   <body>
-    <h1>Simple Banking System</h1>
+    <h1>Banking System</h1>
     <script type="module" src="bankAccount.js"></script>
     <script type="module" src="index.js"></script>
   </body>
